// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoResource component renders as expected 1`] = `
<div>
  <div>
    topButton
  </div>
  <div
    className="no-resource"
  >
    <img
      alt="No resource"
      className="no-resource-icon"
      src="undefined/graphics/no-policy.svg"
    />
    <div
      className="no-resource-text-info"
    >
      <div
        className="no-resource-title"
      >
        title
      </div>
      <div
        className="no-resource-detail"
      >
        detailed description
      </div>
    </div>
    <div
      className="child"
    >
      Test
    </div>
  </div>
</div>
`;

exports[`NoResource component renders as expected 2`] = `
<div>
  <div>
    topButton
  </div>
  <div
    className="no-resource"
  >
    <img
      alt="No resource"
      className="no-resource-icon"
      src="undefined/graphics/no-policy.svg"
    />
    <div
      className="no-resource-text-info"
    >
      <div
        className="no-resource-title"
      >
        title
      </div>
      <div
        className="no-resource-detail"
      >
        detailed description
      </div>
    </div>
    <div
      className="child"
    >
      Test
    </div>
  </div>
</div>
`;

exports[`NoResource component renders as expected 3`] = `
<div>
  <div>
    topButton
  </div>
  <div
    className="no-resource"
  >
    <img
      alt="test"
      className="test-image"
      src="undefined/graphics/test-svg.svg"
    />
    <div
      className="no-resource-text-info"
    >
      <div
        className="test-title"
      >
        title
      </div>
      <div
        className="no-resource-detail"
      >
        detailed description
      </div>
    </div>
    <div
      className="child"
    >
      Test
    </div>
  </div>
</div>
`;

exports[`NoResource component renders as expected 4`] = `
<div
  className="no-resource"
>
  <img
    alt="No resource"
    className="no-resource-icon"
    src="undefined/graphics/no-policy.svg"
  />
</div>
`;

exports[`NoResource component renders as expected 5`] = `
<div
  className="test-class"
>
  <img
    alt="test"
    className="test-image"
    src="undefined/graphics/test-svg.svg"
  />
</div>
`;
